--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@ h1, h2, th, td {
 .image-container img {
     display: block; /* Membuat gambar menjadi elemen "block" */
     margin: 0 auto; /* Memusatkan gambar secara horizontal di desktop */
+/* CSS untuk perangkat seluler (lebar maksimum 768px) */
+    @media (max-width: 768px) {
+        margin: 0; /* Hapus margin horizontal */
+        max-width: 100%; /* Gambar akan mengisi lebar layar penuh */
+    }
 }
 
 .table-container {
