--- a/styleindex.css
+++ b/styleindex.css
@@ -7,10 +7,11 @@ body {
 }
 
 h1 {
-    background-color: #007bff;
+    background-color: green;
     color: white;
     padding: 10px;
     margin-bottom: 20px;
+    font-size: 20px;
 }
 
 ul {
@@ -26,7 +27,7 @@ a {
     text-decoration: none;
     color: #007bff;
     font-weight: bold;
-    font-size: 18px;
+    font-size: 15px;
 }
 
 a:hover {
