--- a/styleindex.css
+++ b/styleindex.css
@@ -7,7 +7,7 @@ body {
 }
 
 h1 {
-    background-color: green;
+    background-color: #007bff;
     color: white;
     padding: 10px;
     margin-bottom: 20px;
